--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,8 @@ header, footer p {
 }
 
 /* line 25, ../sass/_placeholders.scss */
-.section-sulmsee-triathlon header {
+body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon header,
+body.section-sulmsee-triathlon header {
   background-color: #0069b4;
   filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF009FE3', endColorstr='#FF0069B4');
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #009fe3), color-stop(100%, #0069b4));
@@ -1942,7 +1943,7 @@ body html {
   background-color: #fff;
 }
 
-/* line 73, ../sass/_adventures.scss */
+/* line 76, ../sass/_adventures.scss */
 [role="main"] p,
 [role="main"] li,
 [role="main"] li a,
@@ -1954,17 +1955,17 @@ body html {
   font-size: 14px;
   font-size: .875rem;
 }
-/* line 78, ../sass/_adventures.scss */
+/* line 81, ../sass/_adventures.scss */
 [role="main"] li a, [role="main"] p a, [role="main"] span a, [role="main"] .download-file a, [role="main"] a:not(.tabs-primary__tab-link) {
   color: #e7501f;
   text-decoration: none;
 }
-/* line 81, ../sass/_adventures.scss */
+/* line 84, ../sass/_adventures.scss */
 [role="main"] li a:hover, [role="main"] p a:hover, [role="main"] span a:hover, [role="main"] .download-file a:hover, [role="main"] a:not(.tabs-primary__tab-link):hover {
   color: #aa1a1a;
 }
 
-/* line 87, ../sass/_adventures.scss */
+/* line 90, ../sass/_adventures.scss */
 .result a {
   background: transparent url('../images/icon-stoppwatch.png?1383735710') left center no-repeat;
   display: block;
@@ -1975,64 +1976,74 @@ body html {
   line-height: 1.25em;
 }
 
-/* line 100, ../sass/_adventures.scss */
-.section-sulmsee-triathlon [role="main"] li a, .section-sulmsee-triathlon [role="main"] p a, .section-sulmsee-triathlon [role="main"] span a, .section-sulmsee-triathlon [role="main"] .download-file a, .section-sulmsee-triathlon [role="main"] a:not(.tabs-primary__tab-link) {
+/* line 105, ../sass/_adventures.scss */
+body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon [role="main"] li a, body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon [role="main"] p a, body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon [role="main"] span a, body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon [role="main"] .download-file a, body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon [role="main"] a:not(.tabs-primary__tab-link),
+body.section-sulmsee-triathlon [role="main"] li a,
+body.section-sulmsee-triathlon [role="main"] p a,
+body.section-sulmsee-triathlon [role="main"] span a,
+body.section-sulmsee-triathlon [role="main"] .download-file a,
+body.section-sulmsee-triathlon [role="main"] a:not(.tabs-primary__tab-link) {
   color: #009fe3;
   text-decoration: none;
 }
-/* line 103, ../sass/_adventures.scss */
-.section-sulmsee-triathlon [role="main"] li a:hover, .section-sulmsee-triathlon [role="main"] p a:hover, .section-sulmsee-triathlon [role="main"] span a:hover, .section-sulmsee-triathlon [role="main"] .download-file a:hover, .section-sulmsee-triathlon [role="main"] a:not(.tabs-primary__tab-link):hover {
+/* line 108, ../sass/_adventures.scss */
+body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon [role="main"] li a:hover, body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon [role="main"] p a:hover, body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon [role="main"] span a:hover, body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon [role="main"] .download-file a:hover, body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon [role="main"] a:not(.tabs-primary__tab-link):hover,
+body.section-sulmsee-triathlon [role="main"] li a:hover,
+body.section-sulmsee-triathlon [role="main"] p a:hover,
+body.section-sulmsee-triathlon [role="main"] span a:hover,
+body.section-sulmsee-triathlon [role="main"] .download-file a:hover,
+body.section-sulmsee-triathlon [role="main"] a:not(.tabs-primary__tab-link):hover {
   color: #0069b4;
 }
 
-/* line 118, ../sass/_adventures.scss */
+/* line 124, ../sass/_adventures.scss */
 #content {
   padding-left: 1.5833333333% !important;
   padding-right: 0 !important;
 }
 
-/* line 128, ../sass/_adventures.scss */
+/* line 134, ../sass/_adventures.scss */
 #content .node > .group-left {
   width: 67.31583404%;
   padding-right: 1.778154107%;
 }
-/* line 132, ../sass/_adventures.scss */
+/* line 138, ../sass/_adventures.scss */
 #content .node > .group-right {
   width: 32.68416596%;
 }
 
-/* line 139, ../sass/_adventures.scss */
+/* line 145, ../sass/_adventures.scss */
 .sidebar-second #content {
   width: 67.83333333%;
   margin-right: -67.83333333%;
 }
 
-/* line 144, ../sass/_adventures.scss */
+/* line 150, ../sass/_adventures.scss */
 .sidebar-second .region-sidebar-second {
   width: 32.16666667%;
   margin-left: 67.83333%;
 }
 
-/* line 153, ../sass/_adventures.scss */
+/* line 159, ../sass/_adventures.scss */
 .sidebar-second #content .ds-2col-fluid > .group-left {
   width: 33.4591195%;
   padding-right: 0;
 }
 
-/* line 158, ../sass/_adventures.scss */
+/* line 164, ../sass/_adventures.scss */
 .sidebar-second #content .ds-2col-fluid > .group-right {
   width: 66.5408805%;
   padding-left: 3.396226415%;
   padding-right: 2.641509434%;
 }
 
-/* line 165, ../sass/_adventures.scss */
+/* line 171, ../sass/_adventures.scss */
 .sidebar-second #content .ds-1col {
   margin-right: 24px;
   margin-right: 1.5rem;
 }
 
-/* line 173, ../sass/_adventures.scss */
+/* line 179, ../sass/_adventures.scss */
 .block-menu-block {
   background: #d9d9d9;
   padding-bottom: 16px;
@@ -2040,54 +2051,56 @@ body html {
   margin-top: 29px;
   margin-top: 1.8rem;
 }
-/* line 179, ../sass/_adventures.scss */
+/* line 185, ../sass/_adventures.scss */
 .block-menu-block h2 {
   padding-top: 13px;
   padding-top: .8rem;
   padding-left: 32px;
   padding-left: 2rem;
 }
-/* line 185, ../sass/_adventures.scss */
+/* line 191, ../sass/_adventures.scss */
 .block-menu-block ul {
   padding-left: 32px;
   padding-left: 2rem !important;
 }
-/* line 188, ../sass/_adventures.scss */
+/* line 194, ../sass/_adventures.scss */
 .block-menu-block ul .menu__item.is-leaf, .block-menu-block ul .menu__item.is-collapsed {
   list-style-image: none;
   list-style-type: none;
 }
-/* line 191, ../sass/_adventures.scss */
+/* line 197, ../sass/_adventures.scss */
 .block-menu-block ul .menu__item.is-leaf a, .block-menu-block ul .menu__item.is-collapsed a {
   font-size: 18px;
   font-size: 1.125rem;
 }
-/* line 195, ../sass/_adventures.scss */
+/* line 201, ../sass/_adventures.scss */
 .block-menu-block ul .menu__item.is-leaf a:hover, .block-menu-block ul .menu__item.is-leaf a.active, .block-menu-block ul .menu__item.is-collapsed a:hover, .block-menu-block ul .menu__item.is-collapsed a.active {
   color: #e7501f;
 }
 
-/* line 204, ../sass/_adventures.scss */
-.section-sulmsee-triathlon .block-menu-block {
+/* line 211, ../sass/_adventures.scss */
+body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon .block-menu-block,
+body.section-sulmsee-triathlon .block-menu-block {
+  position: relative;
+}
+/* line 213, ../sass/_adventures.scss */
+body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon .block-menu-block .menu-icons,
+body.section-sulmsee-triathlon .block-menu-block .menu-icons {
   background: url('../images/menu-icons.png?1384855872') 2em 0 no-repeat;
+  position: absolute;
+  height: 38px;
+  width: 227px;
+  top: -18px;
+  top: -1.3rem;
 }
-/* line 206, ../sass/_adventures.scss */
-.section-sulmsee-triathlon .block-menu-block h2 {
-  padding-top: 2.15em;
-}
-/* line 209, ../sass/_adventures.scss */
-.section-sulmsee-triathlon .block-menu-block .menu-block-wrapper {
-  background: #d9d9d9;
-  padding-top: 3.85em;
-  margin-top: -3.85em;
-  padding-bottom: .6em;
-}
-/* line 216, ../sass/_adventures.scss */
-.section-sulmsee-triathlon .block-menu-block .menu__item.is-leaf a:hover, .section-sulmsee-triathlon .block-menu-block .menu__item.is-leaf a.active {
+/* line 222, ../sass/_adventures.scss */
+body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon .block-menu-block .menu__item.is-leaf a:hover, body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon .block-menu-block .menu__item.is-leaf a.active,
+body.section-sulmsee-triathlon .block-menu-block .menu__item.is-leaf a:hover,
+body.section-sulmsee-triathlon .block-menu-block .menu__item.is-leaf a.active {
   color: #009fe3;
 }
 
-/* line 227, ../sass/_adventures.scss */
+/* line 253, ../sass/_adventures.scss */
 .header__region {
   font-size: 14px;
   font-size: .875rem;
@@ -2095,41 +2108,44 @@ body html {
   font-family: OswaldLight, Helvetica, Arial, sans-serif;
 }
 @media only screen and (min-width: 57em) {
-  /* line 227, ../sass/_adventures.scss */
+  /* line 253, ../sass/_adventures.scss */
   .header__region {
     clear: none;
     float: right;
     margin-right: 12.5%;
   }
 }
-/* line 237, ../sass/_adventures.scss */
+/* line 263, ../sass/_adventures.scss */
 .header__region .block, .header__region p {
   margin-top: .15em;
   margin-bottom: 0;
 }
 
-/* line 245, ../sass/_adventures.scss */
+/* line 271, ../sass/_adventures.scss */
 h1, h2, h3 {
   font-family: OswaldBook, Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   color: #e7501f;
 }
 
-/* line 252, ../sass/_adventures.scss */
-.section-sulmsee-triathlon h1, .section-sulmsee-triathlon h2, .section-sulmsee-triathlon h3 {
+/* line 279, ../sass/_adventures.scss */
+body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon h1, body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon h2, body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon h3,
+body.section-sulmsee-triathlon h1,
+body.section-sulmsee-triathlon h2,
+body.section-sulmsee-triathlon h3 {
   color: #009fe3;
 }
 
-/* line 260, ../sass/_adventures.scss */
+/* line 288, ../sass/_adventures.scss */
 nav {
   margin-top: 1em;
   margin-left: 1em;
 }
-/* line 268, ../sass/_adventures.scss */
+/* line 296, ../sass/_adventures.scss */
 nav ul li a:hover, nav ul li a.active {
   color: #e7501f;
 }
-/* line 273, ../sass/_adventures.scss */
+/* line 301, ../sass/_adventures.scss */
 nav ul li:after {
   color: #999999;
   font-family: OswaldBook, Helvetica, Arial, sans-serif;
@@ -2138,94 +2154,96 @@ nav ul li:after {
   content: " | ";
   padding: 0 1em;
 }
-/* line 281, ../sass/_adventures.scss */
+/* line 309, ../sass/_adventures.scss */
 nav ul li.last:after {
   content: "";
   padding: 0;
 }
 
-/* line 288, ../sass/_adventures.scss */
-.section-sulmsee-triathlon nav li a:hover, .section-sulmsee-triathlon nav a.active {
+/* line 319, ../sass/_adventures.scss */
+body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon nav li a:hover, body.node-type-news-stefflhof-sulmsee.section-sulmsee-triahtlon nav li a.active,
+body.section-sulmsee-triathlon nav li a:hover,
+body.section-sulmsee-triathlon nav li a.active {
   color: #009fe3;
 }
 
-/* line 294, ../sass/_adventures.scss */
+/* line 328, ../sass/_adventures.scss */
 .label {
   font-weight: bold;
 }
 
-/* line 301, ../sass/_adventures.scss */
+/* line 335, ../sass/_adventures.scss */
 .node-athleten h2 {
   margin-top: 0;
   margin-bottom: .5em;
 }
 
-/* line 306, ../sass/_adventures.scss */
+/* line 340, ../sass/_adventures.scss */
 .node-athleten .field-collection-container {
   border-top: 1px solid #D3D7D9;
   margin-top: 1em;
 }
-/* line 309, ../sass/_adventures.scss */
+/* line 343, ../sass/_adventures.scss */
 .node-athleten .field-collection-container .field-collection-view {
   margin-left: 0;
 }
 
-/* line 315, ../sass/_adventures.scss */
+/* line 349, ../sass/_adventures.scss */
 .field-collection-item-field-athleten-ergebnisse .right {
   padding-right: .3em;
 }
 
-/* line 330, ../sass/_adventures.scss */
+/* line 364, ../sass/_adventures.scss */
 .fc-header {
   font-size: 22px;
   font-size: 1.375rem !important;
 }
 
-/* line 336, ../sass/_adventures.scss */
+/* line 370, ../sass/_adventures.scss */
 .fc-header-first {
   padding-right: 4px;
   padding-right: .25rem;
 }
 
-/* line 341, ../sass/_adventures.scss */
+/* line 375, ../sass/_adventures.scss */
 .fc-content {
   margin: 0;
 }
 
-/* line 345, ../sass/_adventures.scss */
+/* line 379, ../sass/_adventures.scss */
 .fc-comment {
   margin-top: 1em;
 }
 
-/* line 350, ../sass/_adventures.scss */
+/* line 384, ../sass/_adventures.scss */
 .field-slideshow-caption {
   background-color: #cccccc;
   border-bottom: 1px solid #999999;
 }
-/* line 353, ../sass/_adventures.scss */
+/* line 387, ../sass/_adventures.scss */
 .field-slideshow-caption span {
   padding: .5em;
   display: block;
   line-height: 1em;
 }
-/* line 357, ../sass/_adventures.scss */
+/* line 391, ../sass/_adventures.scss */
 .field-slideshow-caption span a {
   font-size: 14px;
   font-size: .875rem;
 }
 
-/* line 365, ../sass/_adventures.scss */
+/* line 399, ../sass/_adventures.scss */
 .field-slideshow-image {
   border: 1px solid #999999;
 }
 
-/* line 373, ../sass/_adventures.scss */
+/* line 407, ../sass/_adventures.scss */
 footer p {
   padding: .3em 1em 0 1em;
   margin: 0;
   vertical-align: middle;
 }
-/* line 378, ../sass/_adventures.scss */
+/* line 412, ../sass/_adventures.scss */
 footer p a {
   font-family: OswaldBook, Helvetica, Arial, sans-serif;
   font-size: 22px;
@@ -2234,7 +2252,7 @@ footer p a {
   text-decoration: none;
   text-transform: uppercase;
 }
-/* line 386, ../sass/_adventures.scss */
+/* line 420, ../sass/_adventures.scss */
 footer p a:hover {
   color: #e7501f;
 }
