--- a/sass/_placeholders.scss
+++ b/sass/_placeholders.scss
@@ -6,6 +6,13 @@
   @include clearfix;
 }
 
+%clearfix-own {
+    content: " ";
+    display: block;
+    height: 0;
+    clear: both;
+}
+
 // From SASS and Compass for Webdesigners _placeholder.scss line 4ff
 %single-transition {
   @include single-transition(all, .3s, ease, 0s);
