--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -107,6 +107,9 @@ $red-bottom: rgb(170, 26, 26);
 $blue-top: rgb(0, 159, 227);
 $blue-bottom: rgb(0, 105, 180);
 
+$grey-top: rgb(227,226,227);
+$grey-bottom: rgb(151,147,146);
+
 // The amount lists, blockquotes and comments are indented.
 $indent-amount: 30px;
 
